[tool.poetry]
name = "telebot-against-war"
version = "0.0.0"                                          # replaced by dynamic versioning plugin
description = "Async-first fork of pyTelegramBotApi"
authors = ["Igor Vaiman <gosha.vaiman@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/bots-against-war/telebot"
packages = [{ include = "telebot" }]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^7.1.2"
pytest-aiohttp = "1.0.4"
pytest-asyncio = "^0.18.3"
python-dotenv = "^0.20.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
mypy = "^0.960"
flake8-pyproject = "^1.2.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.5"
ujson = "^5.3.0"
typing-extensions = "^4.2.0"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


# dev and testing tools


[tool.black]
line-length = 120

[tool.isort]
profile = 'black'

[tool.mypy]
files = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ['integration: requires a real bot to run']

[tool.flake8]
extend_ignore = ['E501', 'E203', 'E251', 'E202', 'E701', 'W503']
max-line-length = 120
