[tool.poetry]
name = "telebot-against-war"
version = "0.0.0"                                          # replaced by dynamic versioning plugin
description = "Async-first fork of pyTelegramBotApi"
authors = ["Igor Vaiman <gosha.vaiman@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/bots-against-war/telebot"
packages = [{ include = "telebot" }]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-aiohttp = "1.0.4"
pytest-asyncio = "^0.18.3"
python-dotenv = "^0.20.0"
pre-commit = "^2.19.0"
mypy = "^0.960"
ruff = "^0.9.9"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.5"
ujson = "^5.3.0"
typing-extensions = "^4.2.0"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


# dev and testing tools

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]  # check and fix imports


[tool.mypy]
files = "."


[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ['integration: requires a real bot to run']
